syntax = "proto3";

option csharp_namespace = "GrpcClient";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  // Server streaming
  rpc StreamingServer (HelloRequest) returns (stream HelloReply);

  // Client streaming
  rpc StreamingClient (stream HelloRequest) returns (HelloReply);

  // Bi-directional streaming
  rpc StreamingWays (stream HelloRequest) returns (stream HelloReply);

}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
  int32  count = 2;
}